Presque fin de corrections des étapes 1 - 6